--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />   
      <!-- <link rel="stylesheet" href="assets/css/reset.css" type="text/css" / > -->
